fix: corrección del path de los endpoints para poder diferenciarlos
